--- a/index.html
+++ b/index.html
@@ -15,7 +15,27 @@
   <!-- Start Header Section -->
 
   <header id="site-header">
-
+    <div class="container">
+      <div class="header-part">
+        <a href="./index.html">
+          <img src="./images/scoot-black-logo.svg" width="108" height="29" alt="Our Brand's Logo">
+        </a>
+        <nav class="site-nav">
+          <ul class="site-nav__list">
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="#">About</a>
+            </li>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="#">Location</a>
+            </li>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="#">Careers</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="site-register-link site-links" href="#">Get Scootin</a>
+      </div>
+    </div>
   </header>
 
   <!-- End of Header Section -->
@@ -26,9 +46,88 @@
 
     <!-- Start Hero Section -->
     <section id="hero">
-
+      <div class="container">
+        <div class="hero-part">
+          <div class="hero-part__title-box">
+            <h1 class="hero-part__title">Scooter sharing made simple</h1>
+          </div>
+          <p class="hero-part__text">Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient
+            locations in each of our cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re
+            away!</p>
+          <a class="hero-part__link site-links" href="#">Get Scootin</a>
+        </div>
+      </div>
     </section>
     <!-- End of Hero Section -->
+
+    <!-- Start Plan Section -->
+    <section id="plan">
+      <div class="container">
+        <div class="plan-part">
+          <ul class="plan-part__list">
+            <li class="plan-part__item">
+              <h2 class="plan-part__item-title">Locate with app</h2>
+              <p class="plan-part__item-text">Use the app to find the nearest scooter to you. We are continuously
+                placing scooters in the areas with most demand, so one should never be too far away.</p>
+            </li>
+            <li class="plan-part__item">
+              <h2 class="plan-part__item-title">Pick your scooter</h2>
+              <p class="plan-part__item-text">We show the most important info for the scooters closest to you. So you
+                know how much charge they have left and can see roughly how much it will cost.</p>
+            </li>
+            <li class="plan-part__item">
+              <h2 class="plan-part__item-title">Enjoy the ride</h2>
+              <p class="plan-part__item-text">Scan the QR code and the bike will unlock. Retract the cable lock, put on
+                a helmet, and you’re off! Always lock bikes away from walkways and accessibility ramps.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- End of Plan Section -->
+
+    <!-- Start Info Section -->
+    <section id="info">
+      <div class="container">
+        <div class="info-part">
+          <ul class="info-part-list easy-list">
+            <li class="easy-list__item">
+              <div class="easy-list__text-box">
+                <h2 class="easy-list__title">Easy to use riding telemetry</h2>
+                <p class="easy-list__text">The Scoot app is available with riding telemetry. This means it can show you
+                  your average speed, how
+                  long you've been using the scooter, your traveling distance, and many more things all in an easy to
+                  use app.</p>
+                <a class="easy-list__link site-links" href="#">Learn More</a>
+              </div>
+              <img class="easy-list__img" src="./images/easy-img.jpg" width="445" height="445"
+                alt="A woman checking her phone" srcset="./images/easy-img.jpg 1x, ./images/easy-img@2x.jpg 2x">
+            </li>
+            <li class="easy-list__item">
+              <div class="easy-list__text-box">
+                <h2 class="easy-list__title">Coming to a city near you</h2>
+                <p class="easy-list__text">Scoot is available in 4 major cities so far. We’re expanding rapidly, so be
+                  sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on
+                  23 cities over the coming year.</p>
+                <a class="easy-list__link site-links" href="#">Learn More</a>
+              </div>
+              <img class="easy-list__img" src="./images/city-img.jpg" width="445" height="445"
+                alt="A woman checking her phone" srcset="./images/city-img.jpg 1x, ./images/city-img@2x.jpg 2x">
+            </li>
+            <li class="easy-list__item">
+              <div class="easy-list__text-box">
+                <h2 class="easy-list__title">Zero hassle payments</h2>
+                <p class="easy-list__text">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
+                <a class="easy-list__link site-links" href="#">Learn More</a>
+              </div>
+              <img class="easy-list__img" src="./images/hassle-img.jpg" width="445" height="445"
+                alt="A woman checking her phone" srcset="./images/hassle-img.jpg 1x, ./images/hassle-img@2x.jpg 2x">
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- End of Info Section -->
 
   </main>
 
