--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
   <!-- Start Header Section -->
   <header id="site-header">
-
+    <!-- Header -->
   </header>
   <!-- End of Header Section -->
 
