--- a/location.html
+++ b/location.html
@@ -13,6 +13,8 @@
 
 <body>
 
+    <!-- <header></header> -->
+
     <main>
         <section class="hero hero--careers" id="hero">
             <div class="container">
