--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <nav class="site-nav">
           <ul class="site-nav__list">
             <li class="site-nav__item">
-              <a class="site-nav__link" href="#">About</a>
+              <a class="site-nav__link" href="./about.html">About</a>
             </li>
             <li class="site-nav__item">
-              <a class="site-nav__link" href="#">Location</a>
+              <a class="site-nav__link" href="./location.html">Location</a>
             </li>
             <li class="site-nav__item">
-              <a class="site-nav__link" href="#">Careers</a>
+              <a class="site-nav__link" href="./careers.html">Careers</a>
             </li>
           </ul>
         </nav>
@@ -117,7 +117,9 @@
             <li class="easy-list__item">
               <div class="easy-list__text-box">
                 <h2 class="easy-list__title">Zero hassle payments</h2>
-                <p class="easy-list__text">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
+                <p class="easy-list__text">Our payment is as easy as one two three. We accept most credit cards and
+                  debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You
+                  can defer payment for up to a month.</p>
                 <a class="easy-list__link site-links" href="#">Learn More</a>
               </div>
               <img class="easy-list__img" src="./images/hassle-img.jpg" width="445" height="445"
