--- a/about.html
+++ b/about.html
@@ -13,9 +13,31 @@
 
 <body>
     <!-- Start Header Section -->
+
     <header id="site-header">
-        <!-- Header -->
+        <div class="container">
+            <div class="header-part">
+                <a href="./index.html">
+                    <img src="./images/scoot-black-logo.svg" width="108" height="29" alt="Our Brand's Logo">
+                </a>
+                <nav class="site-nav">
+                    <ul class="site-nav__list">
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="./about.html">About</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="./location.html">Location</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="./careers.html">Careers</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a class="site-register-link site-links" href="#">Get Scootin</a>
+            </div>
+        </div>
     </header>
+
     <!-- End of Header Section -->
 
 
