--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@
     <!-- Start Main Section -->
     <main id="site-main">
         <!-- Start Hero Section -->
-        <section class="hero" id="hero">
+        <section class="about-hero">
             <div class="container">
-                <h2 class="hero__heading">About</h2>
+                <h2 class="about-hero__heading">About</h2>
             </div>
         </section>
 
