--- a/location.html
+++ b/location.html
@@ -42,9 +42,9 @@
     <!-- End of Header Section -->
 
     <main>
-        <section class="hero hero--careers" id="hero">
+        <section class="about-hero hero--careers">
             <div class="container">
-                <h2 class="hero__heading">Locations</h2>
+                <h2 class="about-hero__heading">Locations</h2>
             </div>
         </section>
 
