--- a/about.html
+++ b/about.html
@@ -50,6 +50,32 @@
             </div>
         </section>
 
+        <!-- Start Info Section -->
+        <section id="info about-info">
+            <div class="container">
+                <div class="info-part">
+                    <ul class="info-part-list easy-list">
+                        <li class="easy-list__item about-easy-list__item">
+                            <div class="easy-list__text-box">
+                                <h2 class="easy-list__title">Mobility for the digital era</h2>
+                                <p class="easy-list__text">Getting around should be simple (and even fun!) for everyone. We embrace technology to provide low cost, smart access to scooters at your fingertips.</p>
+                            </div>
+                            <img class="easy-list__img" src="./images/mobilit-one.jpg" width="445" height="445"
+                                alt="A woman checking her phone">
+                        </li>
+                        <li class="easy-list__item">
+                            <div class="easy-list__text-box">
+                                <h2 class="easy-list__title">Better urban living</h2>
+                                <p class="easy-list__text">We’re helping connect cities and bring people closer together. Our scooters are also fully-electric and we offset the minimal carbon footprint for each ride.</p>
+                            </div>
+                            <img class="easy-list__img" src="./images/mobilit-two.jpg" width="445" height="445"
+                                alt="A woman checking her phone">
+                        </li>                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- End of Info Section -->
+
         <section class="value">
             <div class="container">
                 <h2 class="value__heading">
@@ -282,6 +308,7 @@
       </div>
     </section> -->
 
+        <!-- Start Article Section -->
         <article class="article">
             <div class="container">
                 <div class="article__box">
@@ -290,7 +317,6 @@
                             Sign up and Scoot off today
                         </h2>
                     </div>
-
                     <div class="article__links">
                         <a class="article__link" href="https://www.apple.com/ru/app-store/" target="blank">
                             <p class="article__subdesc">
@@ -300,7 +326,6 @@
                                 AppStore
                             </p>
                         </a>
-
                         <a class="article__link" href="https://play.google.com/store/games?hl=ru&gl=US" target="blank">
                             <p class="article__subdesc">
                                 Get it on
@@ -309,13 +334,11 @@
                                 GooglePlay
                             </p>
                         </a>
-
-
                     </div>
                 </div>
             </div>
         </article>
-        <!-- End of Hero Section -->
+        <!-- End of Article Section -->
     </main>
 
     <!-- End of Main Section -->
