--- a/careers.html
+++ b/careers.html
@@ -169,39 +169,37 @@
             </div>
         </section>
 
-        <article class="article">
-            <div class="container">
-                <div class="article__box">
-                    <div class="article__heading">
-                        <h2 class="article__title">
-                            Sign up and Scoot off today
-                        </h2>
-                    </div>
-
-                    <div class="article__links">
-                        <a class="article__link" href="https://www.apple.com/ru/app-store/" target="blank">
-                            <p class="article__subdesc">
-                                Available on the
-                            </p>
-                            <p class="article__download__type">
-                                AppStore
-                            </p>
-                        </a>
-
-                        <a class="article__link" href="https://play.google.com/store/games?hl=ru&gl=US" target="blank">
-                            <p class="article__subdesc">
-                                Get it on
-                            </p>
-                            <p class="article__download__type">
-                                GooglePlay
-                            </p>
-                        </a>
-
-
-                    </div>
-                </div>
+    <!-- Start Article Section -->
+    <article class="article">
+        <div class="container">
+          <div class="article__box">
+            <div class="article__heading">
+              <h2 class="article__title">
+                Sign up and Scoot off today
+              </h2>
             </div>
-        </article>
+            <div class="article__links">
+              <a class="article__link" href="https://www.apple.com/ru/app-store/" target="blank">
+                <p class="article__subdesc">
+                  Available on the
+                </p>
+                <p class="article__download__type">
+                  AppStore
+                </p>
+              </a>
+              <a class="article__link" href="https://play.google.com/store/games?hl=ru&gl=US" target="blank">
+                <p class="article__subdesc">
+                  Get it on
+                </p>
+                <p class="article__download__type">
+                  GooglePlay
+                </p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </article>
+      <!-- End of Article Section -->
     </main>
 
 
