Add map, change some positions, add list

--- a/careers.html
+++ b/careers.html
@@ -48,6 +48,26 @@
             </div>
         </section>
 
+            <!-- Start Info Section -->
+    <section id="info careers-info">
+        <div class="container">
+          <div class="info-part">
+            <ul class="info-part-list easy-list">
+              <li class="easy-list__item">
+                <div class="easy-list__text-box">
+                  <h2 class="easy-list__title">Care to join our mission?</h2>
+                  <p class="easy-list__text">We’re always looking for ambitious individuals to help us on our journey. If you’re passionate about our mission to provide clean, accessible transport to improve urban living we want to hear from you!</p>
+                  <a class="easy-list__link site-links" href="#">Learn More</a>
+                </div>
+                <img class="easy-list__img" src="./images/easy-img.jpg" width="445" height="445"
+                  alt="A woman checking her phone" srcset="./images/easy-img.jpg 1x, ./images/easy-img@2x.jpg 2x">
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- End of Info Section -->
+
         <section class="value">
             <div class="container">
                 <h2 class="value__heading">
