--- a/about.html
+++ b/about.html
@@ -58,19 +58,26 @@
                         <li class="easy-list__item about-easy-list__item">
                             <div class="easy-list__text-box">
                                 <h2 class="easy-list__title">Mobility for the digital era</h2>
-                                <p class="easy-list__text">Getting around should be simple (and even fun!) for everyone. We embrace technology to provide low cost, smart access to scooters at your fingertips.</p>
+                                <p class="easy-list__text">Getting around should be simple (and even fun!) for everyone.
+                                    We embrace technology to provide low cost, smart access to scooters at your
+                                    fingertips.</p>
                             </div>
-                            <img class="easy-list__img" src="./images/mobilit-one.jpg" width="445" height="445"
+                            <img class="easy-list__img" src="./images/mobilit-one.jpg"
+                                srcset="./images/mobilit-one.jpg 1x, ./images/about-one.jpg 2x" width="445" height="445"
                                 alt="A woman checking her phone">
                         </li>
                         <li class="easy-list__item">
                             <div class="easy-list__text-box">
                                 <h2 class="easy-list__title">Better urban living</h2>
-                                <p class="easy-list__text">We’re helping connect cities and bring people closer together. Our scooters are also fully-electric and we offset the minimal carbon footprint for each ride.</p>
+                                <p class="easy-list__text">We’re helping connect cities and bring people closer
+                                    together. Our scooters are also fully-electric and we offset the minimal carbon
+                                    footprint for each ride.</p>
                             </div>
-                            <img class="easy-list__img" src="./images/mobilit-two.jpg" width="445" height="445"
+                            <img class="easy-list__img" src="./images/mobilit-two.jpg"
+                                srcset="./images/mobilit-two.jpg 1x, ./images/about-two.jpg 2x" width="445" height="445"
                                 alt="A woman checking her phone">
-                        </li>                    </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -84,7 +91,8 @@
 
                 <ul class="value__list">
                     <li class="value__item">
-                        <img class="value__image" src="./images/value-one.jpg" width="240" height="240"
+                        <img class="value__image" src="./images/value-one.jpg"
+                            srcset="./images/value-one.jpg 1x, ./images/value-one@2x.jpg 2x" width="240" height="240"
                             alt="Value card image">
                         <h3 class="value__subheading">
                             Our tech
@@ -97,7 +105,8 @@
                     </li>
 
                     <li class="value__item">
-                        <img class="value__image" src="./images/value-two.jpg" width="240" height="240"
+                        <img class="value__image" src="./images/value-two.jpg"
+                            srcset="./images/value-two.jpg 1x, ./images/value-two@2x.jpg 2x" width="240" height="240"
                             alt="Value card image">
                         <h3 class="value__subheading">
                             Our integrity
@@ -110,8 +119,9 @@
                     </li>
 
                     <li class="value__item">
-                        <img class="value__image" src="./images/value-three.jpg" width="240" height="240"
-                            alt="Value card image">
+                        <img class="value__image" src="./images/value-three.jpg"
+                            srcset="./images/value-three.jpg 1x, ./images/value-three@2x.jpg 2x" width="240"
+                            height="240" alt="Value card image">
                         <h3 class="value__subheading">
                             Our community
                         </h3>
