--- a/careers.html
+++ b/careers.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Careers Page</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <!-- <link rel="stylesheet" href="./css/main.min.css"> -->
+    <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+    <!-- <link rel="stylesheet" href="./css/main.css"> -->
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -48,25 +48,28 @@
             </div>
         </section>
 
-            <!-- Start Info Section -->
-    <section id="info careers-info">
-        <div class="container">
-          <div class="info-part">
-            <ul class="info-part-list easy-list">
-              <li class="easy-list__item">
-                <div class="easy-list__text-box">
-                  <h2 class="easy-list__title">Care to join our mission?</h2>
-                  <p class="easy-list__text">We’re always looking for ambitious individuals to help us on our journey. If you’re passionate about our mission to provide clean, accessible transport to improve urban living we want to hear from you!</p>
-                  <a class="easy-list__link site-links" href="#">Learn More</a>
+        <!-- Start Info Section -->
+        <section id="info careers-info">
+            <div class="container">
+                <div class="info-part">
+                    <ul class="info-part-list easy-list">
+                        <li class="easy-list__item">
+                            <div class="easy-list__text-box">
+                                <h2 class="easy-list__title">Care to join our mission?</h2>
+                                <p class="easy-list__text">We’re always looking for ambitious individuals to help us on
+                                    our journey. If you’re passionate about our mission to provide clean, accessible
+                                    transport to improve urban living we want to hear from you!</p>
+                                <a class="easy-list__link site-links" href="#">Learn More</a>
+                            </div>
+                            <img class="easy-list__img" src="./images/easy-img.jpg" width="445" height="445"
+                                alt="A woman checking her phone"
+                                srcset="./images/easy-img.jpg 1x, ./images/easy-img@2x.jpg 2x">
+                        </li>
+                    </ul>
                 </div>
-                <img class="easy-list__img" src="./images/easy-img.jpg" width="445" height="445"
-                  alt="A woman checking her phone" srcset="./images/easy-img.jpg 1x, ./images/easy-img@2x.jpg 2x">
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-      <!-- End of Info Section -->
+            </div>
+        </section>
+        <!-- End of Info Section -->
 
         <section class="value">
             <div class="container">
@@ -76,7 +79,8 @@
 
                 <ul class="value__list">
                     <li class="value__item">
-                        <img class="value__image" src="./images/value-one.jpg" width="240" height="240"
+                        <img class="value__image" src="./images/value-one.jpg"
+                            srcset="./images/value-one.jpg 1x,./images/value-one@2x.jpg 2x" width="240" height="240"
                             alt="Value card image">
                         <h3 class="value__subheading">
                             Our tech
@@ -89,7 +93,8 @@
                     </li>
 
                     <li class="value__item">
-                        <img class="value__image" src="./images/value-two.jpg" width="240" height="240"
+                        <img class="value__image" src="./images/value-two.jpg"
+                            srcset="./images/value-two.jpg 1x, ./images/value-two@2x.jpg 2x" width="240" height="240"
                             alt="Value card image">
                         <h3 class="value__subheading">
                             Our integrity
@@ -102,8 +107,9 @@
                     </li>
 
                     <li class="value__item">
-                        <img class="value__image" src="./images/value-three.jpg" width="240" height="240"
-                            alt="Value card image">
+                        <img class="value__image" src="./images/value-three.jpg"
+                            srcset="./images/value-three.jpg 1x, ./images/value-three@2x.jpg 2x" width="240"
+                            height="240" alt="Value card image">
                         <h3 class="value__subheading">
                             Our community
                         </h3>
@@ -189,37 +195,37 @@
             </div>
         </section>
 
-    <!-- Start Article Section -->
-    <article class="article">
-        <div class="container">
-          <div class="article__box">
-            <div class="article__heading">
-              <h2 class="article__title">
-                Sign up and Scoot off today
-              </h2>
+        <!-- Start Article Section -->
+        <article class="article">
+            <div class="container">
+                <div class="article__box">
+                    <div class="article__heading">
+                        <h2 class="article__title">
+                            Sign up and Scoot off today
+                        </h2>
+                    </div>
+                    <div class="article__links">
+                        <a class="article__link" href="https://www.apple.com/ru/app-store/" target="blank">
+                            <p class="article__subdesc">
+                                Available on the
+                            </p>
+                            <p class="article__download__type">
+                                AppStore
+                            </p>
+                        </a>
+                        <a class="article__link" href="https://play.google.com/store/games?hl=ru&gl=US" target="blank">
+                            <p class="article__subdesc">
+                                Get it on
+                            </p>
+                            <p class="article__download__type">
+                                GooglePlay
+                            </p>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="article__links">
-              <a class="article__link" href="https://www.apple.com/ru/app-store/" target="blank">
-                <p class="article__subdesc">
-                  Available on the
-                </p>
-                <p class="article__download__type">
-                  AppStore
-                </p>
-              </a>
-              <a class="article__link" href="https://play.google.com/store/games?hl=ru&gl=US" target="blank">
-                <p class="article__subdesc">
-                  Get it on
-                </p>
-                <p class="article__download__type">
-                  GooglePlay
-                </p>
-              </a>
-            </div>
-          </div>
-        </div>
-      </article>
-      <!-- End of Article Section -->
+        </article>
+        <!-- End of Article Section -->
     </main>
 
 
