--- a/location.html
+++ b/location.html
@@ -8,9 +8,9 @@
     <title>Location Page</title>
     <script type="text/javascript" src="https://www.amcharts.com/lib/3/ammap.js"></script>
     <script type="text/javascript" src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <!-- <link rel="stylesheet" href="./css/main.min.css"> -->
+    <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+    <!-- <link rel="stylesheet" href="./css/main.css"> -->
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -59,9 +59,11 @@
                         <h2 class="map-info__title">Your City Not Listed?</h2>
                     </div>
                     <div class="map-info__text-box">
-                        <p class="map-info__text">If you’d like to see Scoot in your hometown, be sure to let us know. We track requests and plan launches based on demand. Feel free to message us by clicking the link or messaging us on social.</p>
+                        <p class="map-info__text">If you’d like to see Scoot in your hometown, be sure to let us know.
+                            We track requests and plan launches based on demand. Feel free to message us by clicking the
+                            link or messaging us on social.</p>
                     </div>
-                    <a class="map-info__link site-links" href="#">Message Us</a>   
+                    <a class="map-info__link site-links" href="#">Message Us</a>
                 </div>
             </div>
         </section>
@@ -113,15 +115,15 @@
                         <nav>
                             <ul class="footer__list">
                                 <li class="footer__item">
-                                    <a class="footer__link" href="#">About</a>
+                                    <a class="footer__link" href="./about.html">About</a>
                                 </li>
 
                                 <li class="footer__item">
-                                    <a class="footer__link" href="#">Location</a>
+                                    <a class="footer__link" href="./location.html">Location</a>
                                 </li>
 
                                 <li class="footer__item">
-                                    <a class="footer__link" href="#">Careers</a>
+                                    <a class="footer__link" href="./careers.html">Careers</a>
                                 </li>
                             </ul>
                         </nav>
