--- a/careers.html
+++ b/careers.html
@@ -61,9 +61,9 @@
                                     transport to improve urban living we want to hear from you!</p>
                                 <a class="easy-list__link site-links" href="#">Learn More</a>
                             </div>
-                            <img class="easy-list__img" src="./images/easy-img.jpg" width="445" height="445"
+                            <img class="easy-list__img" src="./images/careers-one.jpg" width="445" height="445"
                                 alt="A woman checking her phone"
-                                srcset="./images/easy-img.jpg 1x, ./images/easy-img@2x.jpg 2x">
+                                srcset="./images/careers-one.jpg 1x, ./images/careers-one@2x.jpg 2x">
                         </li>
                     </ul>
                 </div>
